objects/tffa__JobConfiguration__mdt.object
<CustomObject>
    <description>Definition of Batch schedulable jobs in the system</description>
    <fields>
        <fullName>tffa__ApexClass__c</fullName>
        <description>The name of the apex class which extends AbstractBatchJob</description>
        <inlineHelpText>ensure to extend AbstractBatchJob</inlineHelpText>
        <label>ApexClass</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BatchSize__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The number of records that can be processed in a batch.</description>
        <label>Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__CronExpression__c</fullName>
        <description>Based on the values provided in this expression, the job trigger is set to execute on the specified time. The format is read as - Seconds, Minutes, Hours, Day_of_month, Month, Day_of_week. Ignored for ADHOC type</description>
        <inlineHelpText>The format is read as - Seconds, Minutes, Hours, Day_of_month, Month, Day_of_week.</inlineHelpText>
        <label>CronExpression</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Describe the purpose of the batch job</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the job is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ScheduleIntervalInMinutes__c</fullName>
        <description>If the scheduled job is required to repeate in intervals in minutes  special handling is done</description>
        <inlineHelpText>Default is -1 . Add a value between 2-40</inlineHelpText>
        <label>Schedule Interval In Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the job is system job and not visible on the UI</description>
        <label>System Job?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>The type of batch job. 
Scheduled jobs will run by schedule defined by the cron expression
Adhoc jobs will scheduled and executed when then user triggers it.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCHEDULED</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>ADHOC</fullName>
                    <label>Adhoc</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Configuration</label>
    <listViews>
        <fullName>tffa__Job_Configuration</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>tffa__Description__c</columns>
        <columns>tffa__ApexClass__c</columns>
        <columns>tffa__BatchSize__c</columns>
        <columns>tffa__CronExpression__c</columns>
        <columns>tffa__Enabled__c</columns>
        <columns>tffa__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Job Configuration</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Job Configurations</pluralLabel>
    <validationRules>
        <fullName>tffa__BatchSize</fullName>
        <active>true</active>
        <description>batch size</description>
        <errorConditionFormula>tffa__BatchSize__c &gt; 200</errorConditionFormula>
        <errorDisplayField>tffa__BatchSize__c</errorDisplayField>
        <errorMessage>Batch size cannot be more than 200</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>tffa__Cron_Expression</fullName>
        <active>true</active>
        <description>CronExpression is mandatory if type is scheduled</description>
        <errorConditionFormula>AND((ISBLANK( tffa__CronExpression__c)),
ISPICKVAL( tffa__Type__c ,&quot;SCHEDULED&quot;))</errorConditionFormula>
        <errorDisplayField>tffa__CronExpression__c</errorDisplayField>
        <errorMessage>CronExpression is mandatory if Type is scheduled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>tffa__ScheduleIntervalInMinutesValidation</fullName>
        <active>true</active>
        <errorConditionFormula>OR( MOD(60,tffa__ScheduleIntervalInMinutes__c) != 0,tffa__ScheduleIntervalInMinutes__c &lt; 5)</errorConditionFormula>
        <errorDisplayField>tffa__ScheduleIntervalInMinutes__c</errorDisplayField>
        <errorMessage>Schedule Interval In Minutes  should be between 5 and 30 and a factor of 60</errorMessage>
    </validationRules>
</CustomObject>